--- a/index.html
+++ b/index.html
@@ -2,8 +2,21 @@
   <head>
     <meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="styles.css" />
+	<link rel="stylesheet" href="main.css" />
     <title>CSS Scrolling Parallax</title>
   </head>
-  <body></body>
+  <body>
+    <main class="wrapper">
+      <h1 class=main-header>CSS parallax study</h1>
+      <section class="section parallax bg1">
+         <h2>Cute Kitten</h2>
+      </section>
+      <section class="section static">
+         <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur rem reprehenderit dolor provident facilis ipsa quas, consequatur consequuntur molestias eius?</h2>
+      </section>
+      <section class="section parallax bg2">
+         <h2>Fluffy Kitten</h2>
+      </section>
+   </main>
+  </body>
 </html>
