change section content

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <main class="wrapper">
       <h1 class=main-header>CSS parallax study</h1>
       <section class="section parallax bg1">
-         <h2>Cute Kitten</h2>
+         <h2>First photo</h2>
       </section>
       <section class="section static">
          <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur rem reprehenderit dolor provident facilis ipsa quas, consequatur consequuntur molestias eius?</h2>
       </section>
       <section class="section parallax bg2">
-         <h2>Fluffy Kitten</h2>
+         <h2>Second photo</h2>
       </section>
    </main>
   </body>
