fix tags in html

--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="main.css" />
-    <title>CSS Scrolling Parallax</title>
-  </head>
-  <body>
-    <main class="wrapper">
-      <h1 class=main-header>CSS parallax study</h1>
-      <section class="section parallax bg1">
-         <h2>First photo</h2>
-      </section>
-      <section class="section static">
-         <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur rem reprehenderit dolor provident facilis ipsa quas, consequatur consequuntur molestias eius?</h2>
-      </section>
-      <section class="section parallax bg2">
-         <h2>Second photo</h2>
-      </section>
-   </main>
-  </body>
+<head>
+ <meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link href="normalize.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="main.css" />
+ <title>CSS Scrolling Parallax</title>
+</head>
+<body>
+  <main class="wrapper">
+    <h1 class="main-header">CSS parallax study</h1>
+    <section class="parallax bg1">
+       <h2>First photo</h2>
+    </section>
+    <section class="static-section">
+       <h2>Interesting title</h2>
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur rem reprehenderit dolor provident facilis ipsa quas, consequatur consequuntur molestias eius? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias facere, minus, atque est itaque odit voluptates labore suscipit ex impedit quos unde fuga vitae! Debitis ea quam voluptates nemo doloremque voluptatum, dolor, tempore laborum porro quaerat necessitatibus illo obcaecati quasi eveniet itaque? Unde magnam autem, ab alias perferendis molestiae dicta asperiores praesentium doloribus maiores voluptates non earum aspernatur quos saepe dolores voluptatibus accusantium et culpa ad facere quisquam distinctio. Laborum, explicabo illum nobis cumque reiciendis officiis tempora consequuntur magnam natus cupiditate amet beatae aperiam omnis saepe laudantium quae nam inventore, nesciunt nihil, veritatis temporibus enim minima? Ipsa repellendus ratione aliquid autem quia quibusdam minus facilis quae eaque atque corrupti perspiciatis aspernatur, cum voluptate esse eum debitis odio alias suscipit? Enim, at dolor velit error culpa numquam! Facilis dolore fuga aliquid sunt quas ullam iure provident labore voluptatem sint, perferendis voluptates dignissimos eos, exercitationem voluptatum atque vitae tempora voluptatibus quis quam incidunt, ipsam ipsa. Nobis ullam ad temporibus, sequi dolorem dicta et possimus aut sunt excepturi placeat, illo obcaecati expedita velit esse ut saepe fuga unde beatae eveniet, omnis similique. Magnam, ullam, dolorum numquam adipisci debitis labore inventore dignissimos excepturi quam voluptatem minima maiores nesciunt eaque ea quas consequatur necessitatibus? Blanditiis!</p>
+    </section>
+    <section class="parallax bg2">
+       <h2>Second photo</h2>
+    </section>
+ </main>
+</body>
 </html>
