--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <section class="parallax bg2">
        <h2>Second photo</h2>
     </section>
+    <footer>some footer info</footer>
  </main>
 </body>
 </html>
