playing with values

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
  <title>CSS Scrolling Parallax</title>
 </head>
 <body>
-  <main class="wrapper">
+  <main>
     <h1 class="main-header">CSS parallax study</h1>
+    <div class="wrapper">
     <section class="parallax bg1">
        <h2>First photo</h2>
     </section>
@@ -20,6 +21,7 @@
     <section class="parallax bg2">
        <h2>Second photo</h2>
     </section>
+   </div>
     <footer>some footer info</footer>
  </main>
 </body>
