--- a/index.html
+++ b/index.html
@@ -1,28 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link href="normalize.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="main.css" />
- <title>CSS Scrolling Parallax</title>
+   <meta charset="UTF-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <link href="normalize.css" rel="stylesheet" type="text/css">
+   <link rel="stylesheet" href="main.css" />
+   <title>CSS Scrolling Parallax</title>
 </head>
 <body>
-  <main>
-    <h1 class="main-header">CSS parallax study</h1>
-    <div class="wrapper">
-    <section class="parallax bg1">
-       <h2>First photo</h2>
-    </section>
-    <section class="static-section">
-       <h2>Interesting title</h2>
-       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur rem reprehenderit dolor provident facilis ipsa quas, consequatur consequuntur molestias eius? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias facere, minus, atque est itaque odit voluptates labore suscipit ex impedit quos unde fuga vitae! Debitis ea quam voluptates nemo doloremque voluptatum, dolor, tempore laborum porro quaerat necessitatibus illo obcaecati quasi eveniet itaque? Unde magnam autem, ab alias perferendis molestiae dicta asperiores praesentium doloribus maiores voluptates non earum aspernatur quos saepe dolores voluptatibus accusantium et culpa ad facere quisquam distinctio. Laborum, explicabo illum nobis cumque reiciendis officiis tempora consequuntur magnam natus cupiditate amet beatae aperiam omnis saepe laudantium quae nam inventore, nesciunt nihil, veritatis temporibus enim minima? Ipsa repellendus ratione aliquid autem quia quibusdam minus facilis quae eaque atque corrupti perspiciatis aspernatur, cum voluptate esse eum debitis odio alias suscipit? Enim, at dolor velit error culpa numquam! Facilis dolore fuga aliquid sunt quas ullam iure provident labore voluptatem sint, perferendis voluptates dignissimos eos, exercitationem voluptatum atque vitae tempora voluptatibus quis quam incidunt, ipsam ipsa. Nobis ullam ad temporibus, sequi dolorem dicta et possimus aut sunt excepturi placeat, illo obcaecati expedita velit esse ut saepe fuga unde beatae eveniet, omnis similique. Magnam, ullam, dolorum numquam adipisci debitis labore inventore dignissimos excepturi quam voluptatem minima maiores nesciunt eaque ea quas consequatur necessitatibus? Blanditiis!</p>
-    </section>
-    <section class="parallax bg2">
-       <h2>Second photo</h2>
-    </section>
-   </div>
-    <footer>some footer info</footer>
- </main>
+   <main>
+      <h1 class="main-header">Scroll-magic version</h1>
+      <div class="content right illustration_01">
+         <h2>Scroll Down and Watch What Happens</h2>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla deleniti harum ullam facilis beatae voluptatibus, debitis, delectus similique, inventore iusto soluta? Maiores eveniet ab adipisci sint, voluptatum blanditiis error dignissimos molestias non quasi quos facere vitae recusandae. Illo amet dignissimos repellat voluptatem velit neque assumenda saepe expedita quo repudiandae nisi nihil nulla vel, dolores eum quis dolorem totam veritatis quas, quaerat alias! Iure, consequuntur ipsa porro soluta ab ipsam delectus unde quam obcaecati culpa in minima officia mollitia placeat, architecto nam nesciunt debitis doloribus laudantium corporis. Atque corporis at sapiente earum ad, quidem nesciunt natus molestiae facilis ipsum aperiam eos obcaecati veritatis? Aut, facilis nihil fuga impedit natus vitae pariatur accusamus minus tenetur reiciendis nam, ea eum, culpa rem corrupti? Iusto rerum quas sunt. Ducimus sequi vel at error illum enim ipsum ratione, iure temporibus rerum commodi aut corrupti impedit odio facere fuga architecto totam assumenda asperiores provident inventore atque modi nostrum. Architecto, ducimus. Quod, voluptatem ab quaerat laboriosam earum provident aperiam natus molestiae laudantium incidunt ipsa libero totam quo in minima. Error asperiores veniam ea facilis odio vitae fugit labore enim ab quod debitis cum, expedita aut fugiat quas maxime laudantium. Veritatis ipsum quam, tenetur in molestias maxime quis, sed debitis corrupti repellat odit amet consequatur molestiae est praesentium nam alias vel ullam dolores cupiditate harum fugit necessitatibus. Illum corrupti quos animi quae exercitationem, repudiandae delectus error nulla at itaque id necessitatibus commodi autem ratione incidunt aperiam qui, repellat explicabo quasi aspernatur a nobis unde dignissimos! Voluptas, nostrum sint. Provident, minima magni! Blanditiis, molestiae tempora. Atque voluptas quibusdam nam eos natus, accusamus consequuntur eaque velit asperiores ratione fugit. Optio cum repellendus omnis, ea mollitia sed error deserunt tempore laboriosam quaerat aperiam fugit placeat commodi ad aliquid perspiciatis asperiores necessitatibus tenetur culpa dolorem recusandae libero odit temporibus. Ullam, laboriosam et.</p>
+      </div>
+      <footer>some footer info</footer>
+   </main>
 </body>
 </html>
