delete separator__header class

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          <p>Illum corrupti quos animi quae exercitationem, repudiandae delectus error nulla at itaque id necessitatibus commodi autem ratione incidunt aperiam qui, repellat explicabo quasi aspernatur a nobis unde dignissimos! Voluptas, nostrum sint. Provident, minima magni! Blanditiis, molestiae tempora. Atque voluptas quibusdam nam eos natus, accusamus consequuntur eaque velit asperiores ratione fugit. Optio cum repellendus omnis, ea mollitia sed error deserunt tempore laboriosam quaerat aperiam fugit placeat commodi ad aliquid perspiciatis asperiores necessitatibus tenetur culpa dolorem recusandae libero odit temporibus. Ullam, laboriosam et.</p>
       </section>
       <div class="separator">
-         <p class="separator__header">Another Section Starts Here</p>
+         <p>Another Section Starts Here</p>
        </div>
       <section class="content left illustration_02">
          <h2>Fixed Background Scrolling Effect</h2>
